src/objects/RM_QA_Spec__c.object
<CustomObject>
    <fields>
        <fullName>Parameter__c</fullName>
        <formula>QA_Spec__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parameter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QA_Spec__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QA Spec</label>
        <referenceTo>QA_Spec__c</referenceTo>
        <relationshipLabel>RM QA Spec</relationshipLabel>
        <relationshipName>RM_QA_Spec</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>R_Description__c</fullName>
        <formula>Raw_Material__r.R_Description__c</formula>
        <label>R-Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Range__c</fullName>
        <label>Range</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Raw_Material__c</fullName>
        <label>Raw Material</label>
        <referenceTo>RawMaterial__c</referenceTo>
        <relationshipLabel>RM QA Spec</relationshipLabel>
        <relationshipName>RM_QA_Spec</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Test_Method__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Method</label>
        <referenceTo>Test_Method__c</referenceTo>
        <relationshipLabel>RM QA Spec</relationshipLabel>
        <relationshipName>RM_QA_Spec</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UOM__c</fullName>
        <formula>QA_Spec__r.UOM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UOM</label>
        <type>Text</type>
    </fields>
    <label>RM QA Spec</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RMQA-{0000000000}</displayFormat>
        <label>Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RM QA Spec</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>